# relrecon

./: .gitignore  README.MD  pyproject.toml  requirements-ci.txt  requirements.txt
.github/: dependabot.yml
config/: aliases.json  recipe_schema.json  stopwords.json
data/: anchor_dest.csv  austrian.csv  crossstep_dest.csv  crossstep_source.csv  dr_dest.csv  dr_source.csv  gleif_lei_test.csv  gleif_rr_test.csv  gleif_test_vendors.csv  gr_dest.csv  gr_exclusions.csv  gr_groups.json  gr_source.csv  mu_dest.csv  mu_dest_empty.csv  mu_source.csv  mu_source_is_unmatched.csv  mu_source_zero.csv  multipop_comparison_input.csv  selfpop_anchor.csv  so_dest.csv  so_source.csv  tp_multi_pop_dataset.csv
docs/: ci-security-scanning.md  cross-step-rollup-design-note.md  day-in-the-life.md  filter-ops.md  gleif_parent_matching_design_note.md  how-scoring-works.md  l1-recipe.md  loaders.md  multi-phase-recipes.md  trino-quickstart.md
src/: __main__.py  address.py  loaders.py  matching.py  normalize.py  recipe.py  recipe_echo.py  report.py  sidecar_dump.py  signal_analysis.py  signal_excel.py  summary.py
tests/: bench_chunked_cdist.py  noop_hashes.py  test_all_matches_same_step_candidates.py  test_csv_outputs.py  test_decision_record.py  test_exclusions.py  test_final_rollup.py  test_groups.py  test_http_loader.py  test_is_unmatched_collision.py  test_loaders.py  test_matching.py  test_merged_output.py  test_merged_xlsx_formatting.py  test_multi_phase.py  test_normalize.py  test_recipe_echo.py  test_recipe_runs.py  test_schema_validation.py  test_sidecar_dump.py  (+2 more)
(+42 files in other folders)
