[project]
name = "relational_matching"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "B"]
ignore = [
    "S101",   # assert usage (fine in tests)
    "S603",   # subprocess without shell=True (not relevant)
    "S607",   # partial path to executable (not relevant)
    "E501",   # line length (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101", "B112"]
severity = "medium"

[tool.pytest.ini_options]
testpaths = ["tests"]
